More performance updates and a lot of documentation updates